[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/20201125__Ei8FXCL2jB.png" type="Texture" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://sounds/fixed.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/Enemy/Hat/EnemyHat.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/menum.mp3" type="AudioStream" id=7]
[ext_resource path="res://scenes/Credits.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8, -8, 0, 0, 0, 0, 968, -8, 0, 0, 0, 0, 968, 544, 0, 0, 0, 0, -8, 544, 0, 0, 0, 0, -8, -8 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
mob_scenes = [ ExtResource( 5 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 349, 253 )

[node name="StartPosition2D" type="Position2D" parent="YSort"]
position = Vector2( 480, 280 )

[node name="MobPath2D" type="Path2D" parent="YSort"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="YSort/MobPath2D"]
position = Vector2( -8, -8 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Credits" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="hit" from="YSort/Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="close_game" from="HUD" to="." method="_on_HUD_close_game"]
[connection signal="go_to_credits" from="HUD" to="." method="_on_HUD_go_to_credits"]
[connection signal="go_to_menu" from="HUD" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="go_to_menu" from="Credits" to="." method="_on_Credits_go_to_menu"]
